--- a/client/review/review.html
+++ b/client/review/review.html
@@ -18,6 +18,13 @@
     {{> reviewdialog11}}
     {{> reviewdialog12}}
 
+<h3>Waiting For</h3>
+<div id="task_list">
+{{#each waitingfortasks}}
+{{> orgtask_todo_item}}
+{{/each}}
+</div>
+<h3>Projects</h3>
     <ul id="project_list" class="main-review">
       {{#each tasks}}
         {{#if waiting}}
@@ -47,10 +54,6 @@
       {{/each}}
     </ul>
 <hr/>
-<h3>Waiting For</h3>
-{{#each waitingfortasks}}
-{{> orgtask_todo_item}}
-{{/each}}
 <h3>Someday/Maybe</h3>
    <ul id="task_list" class="main-review">
       {{#each tasks2}}
@@ -61,9 +64,11 @@
       {{/each}}
     </ul>
 <h4>Projectless Someday/Maybe tasks</h4>
+<div id="task_list">
 {{#each somedaymaybetasks}}
 {{> orgtask_todo_item}}
 {{/each}}
+</div>
 
   <div class="review-btn btn btn-inverse" id="btnReview">Review</div>
 
