made project titles bigger on Review tab

--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -10,7 +10,7 @@
       </div>
 {{else}}
 {{#if project_has_largeroutcome}}
- <p> {{project_has_largeroutcome}}</p>
+ <p> <h4>{{project_has_largeroutcome}}</h4></p>
 {{else}}
 <span style="color: blue;"><p>What is the larger outcome of this project? </p></span>
 {{/if}}
