sortable MIT list

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -19,7 +19,7 @@
     {{> reviewdialog12}}
 
 <h3>Most Important Tasks (MITs)</h3>
-<div id="task_list">
+<div id="task_list" class="mit_task_list">
 {{#each mits}}
 {{> orgtask_todo_item}}
 {{/each}}
