--- a/client/review/project-item2/project-item2.html
+++ b/client/review/project-item2/project-item2.html
@@ -1,7 +1,7 @@
 <template name="project_item2">
 {{#if project}}
       <li class="task_item alert">
-        <button type="button" class="projclose close startprocessing-button" id="{{_id}}">x</button>
+        <button type="button" class="projclose close" id="{{_id}}">x</button>
 
 <div class="project-item">      
     {{#if editing}}
