moving the mit button again

--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -39,8 +39,9 @@
 
 {{else}}
 
-<div class="todo-item">       <p>{{description}}</p> </div> <p title="{{largeroutcome}}" id="doing-project">{{project}}</p>
+<div class="todo-item">       <p>{{description}}</p> </div>
 <p class="btn btn-inverse {{mitornot}}" id="mit">mit</p>
+<p title="{{largeroutcome}}" id="doing-project">{{project}}</p>
 
 {{/if}}
       </li>
