--- a/client/review/review.html
+++ b/client/review/review.html
@@ -40,7 +40,7 @@
           {{> project_item}}
 {{#if projopen}}
 {{#if orgtasks}}
-  <ul id="task_list">
+  <ul id="task_list" class="org_task_list">
     {{#each orgtasks}}
       {{#if waiting}}
       {{else}}
