prevent alarmset processing code from getting invoked on all Review tab processing

--- a/client/review/alarmseteditingdialog/alarmprocessingdialog/alarmprocessingdialog.html
+++ b/client/review/alarmseteditingdialog/alarmprocessingdialog/alarmprocessingdialog.html
@@ -1,5 +1,5 @@
 <template name="alarmprocessingdialog">
-{{#if processing_task}}
+{{#if processing_alarm}}
 {{#with tasks}}
 <div class="processingdialog alarmprocessingdialog">
  <div class="mask"> </div>
