--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -1,6 +1,6 @@
 <template name="project_item">
 {{#if project}}
-      <li class="task_item alert">
+      <li class="project_item">
         <button type="button" class="projclose close" id="{{_id}}">x</button>
 
 <div class="project-item">      
