--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -1,6 +1,6 @@
 <template name="multicontext">
 {{#each multicontext}}
-<h3>{{this}}</h3>
+<h3>{{this}}</h3><div class="btn btn-inverse closecontext">+</div>
   <ul id="task_list">
     {{#each multitasks}}
       <li class="task_item alert">
@@ -13,7 +13,7 @@
       </div>
 {{else}}
 <div class="todo-item">       <p>{{description}}</p>
-<p class="btn btn-inverse {{mitornot}}" id="mit">mit</p>
+<p class="btn btn-inverse {{mitornot}} mit">mit</p>
 </div>
 {{/if}}
 
@@ -40,7 +40,7 @@
 {{else}}
 
 <div class="todo-item">       <p>{{description}}</p> </div>
-<p class="btn btn-inverse {{mitornot}}" id="mit">mit</p>
+<p class="btn btn-inverse {{mitornot}} mit">mit</p>
 <p title="{{largeroutcome}}" id="doing-project">{{project}}</p>
 
 {{/if}}
