--- a/client/review/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/orgtask-todo-item/orgtask-todo-item.html
@@ -1,10 +1,14 @@
 <template name="orgtask_todo_item">
       <li class="task_item alert">
 {{#if is_kickstarter}}
-<div class="btn btn-inverse active btn-danger kickstart">kickstart</div>
+<div class="btn btn-inverse active btn-danger kickstart">kickstart</div><p class="btn btn-inverse {{mitornot}} mit" >mit</p>
 {{/if}}
 {{#if nokickstart}}
 <div class="btn btn-inverse kickstart choosekickstart">kickstart</div>
+{{/if}}
+{{#if is_priority}}
+<div class="btn {{is_sequential}} kickstart choosesequential">sequential</div>
+{{else}}
 {{/if}}
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
