--- a/client/review/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/orgtask-todo-item/orgtask-todo-item.html
@@ -1,5 +1,9 @@
 <template name="orgtask_todo_item">
       <li class="task_item alert">
+        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
+{{#if mitornot}}
+<div class="btn btn-inverse mitproj">{{project}}</div>
+{{/if}}
 {{#if is_kickstarter}}
 <div class="btn btn-inverse active btn-danger kickstart">kickstart</div><p class="btn btn-inverse {{mitornot}} mit" >mit</p>
 {{/if}}
@@ -10,7 +14,6 @@
 <div class="btn {{is_sequential}} kickstart choosesequential">sequential</div>
 {{else}}
 {{/if}}
-        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
     {{#if editing}}
       <div class="edit">
