--- a/client/review/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/orgtask-todo-item/orgtask-todo-item.html
@@ -1,15 +1,27 @@
 <template name="orgtask_todo_item">
       <li class="task_item alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
+{{#if is_checklistitem}}
+<div class="btn btn-inverse {{mitornot}} mit">mit</div>
+<div class="btn btn-inverse checklistitem choosechecklistitem active">checklistitem</div>
+{{else}}
+
 {{#if mitornot}}
+<div class="btn btn-inverse checklistitem choosechecklistitem mit">checklistitem</div>
 <div class="btn btn-inverse mitproj">{{project}}</div>
 {{/if}}
 {{#if is_kickstarter}}
-<div class="btn btn-inverse active btn-danger kickstart">kickstart</div><p class="btn btn-inverse {{mitornot}} mit" >mit</p>
+<div class="btn btn-inverse active btn-danger kickstart">kickstart</div><p class="btn btn-inverse {{mitornot}} mit">mit</p>
 {{/if}}
 {{#if nokickstart}}
 <div class="btn btn-inverse kickstart choosekickstart">kickstart</div>
+{{#if mitornot}}
+{{else}}
+<div class="btn btn-inverse checklistitem choosechecklistitem">checklistitem</div>
 {{/if}}
+{{/if}}
+{{/if}}
+
 {{#if is_priority}}
 <div class="btn {{is_sequential}} kickstart choosesequential">sequential</div>
 {{else}}
