putting date on Review tab

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -1,5 +1,6 @@
 <template name="review">
   {{#if is_reviewing}}
+<p>{{date}}</p>
     {{> processingdialog}}
     {{> alarmprocessingdialog}}
     {{> documenteditingdialog}}
