--- a/client/process/process.html
+++ b/client/process/process.html
@@ -11,5 +11,16 @@
       {{/each}}
     </ul>
 
+<!-- load more -->
+  {{#if Template.subscriptionsReady}}
+    {{#if hasMorePosts}}
+      <a class="load-more" href="#">Load More</a>
+    {{/if}}
+  {{else}}
+    <div class="loading">{{>spinner}}</div>
+  {{/if}}
+<!-- end of load more -->
+
+
   {{/if}}
 </template>
