--- a/client/review/review.html
+++ b/client/review/review.html
@@ -12,50 +12,10 @@
 
 {{> waitingfors}}
 
-<h3>Projects</h3>
-    <ul id="project_list" class="main-review">
-      {{#each tasks}}
-        {{#if waiting}}
-        {{else}}
-<div class="active-project {{nokickstart}}">
-          {{> project_item}}
-{{#if projopen}}
-{{#if orgtasks}}
-  <ul id="task_list" class="org_task_list">
-    {{#each orgtasks}}
-      {{#if waiting}}
-      {{else}}
-        {{> orgtask_todo_item}}
-      {{/if}}
-    {{/each}}
-  </ul>
-{{/if}}
-
-    <div class="newtask-org">
-      <input type="text" id="add-newtask-org" value="" />
-      <input type="text" id="add-newtask-context-org" placeholder="{{defaultcontext}}" />
-    </div>
-{{else}} <!-- if proj not open -->
-{{#each kickstartertask}}
-  <ul id="task_list">
-      {{#if waiting}}
-      {{else}}
-        {{> orgtask_todo_item}}
-      {{/if}}
-  </ul>
-{{/each}}
-
-{{/if}}
-
-</div> <!-- active project -->
-        {{/if}}
-      {{/each}}
-    </ul>
+{{> projects}}
 
 {{> somedaymaybeprojects}}
 {{> projectlesssomedaymaybes}}
-
-  <div class="review-btn btn btn-inverse" id="btnReview">Review</div>
 
   {{/if}}
 </template>
