--- a/client/review/projects/projects.html
+++ b/client/review/projects/projects.html
@@ -3,8 +3,6 @@
 <h3>Projects</h3>
     <ul id="project_list" class="main-review">
       {{#each projects}}
-        {{#if waiting}}
-        {{else}}
 <div class="active-project {{nokickstart}}">
           {{> project_item}}
 {{#if projopen}}
@@ -30,10 +28,10 @@
   </ul>
 {{/each}}
 
-{{/if}}
+{{/if}} <!-- close projopen if/else -->
 
 </div> <!-- active project -->
-        {{/if}}
+
       {{/each}}
     </ul>
 
