--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -21,6 +21,56 @@
     {{#if projopen}}
 {{/if}}
 
+    {{#if process}}
+      <button type="button" style="float:right;" class="processing-button">process</button>
+    {{/if}}
+
+{{#if projopen}}
+<ul>
+{{#each documents}}
+<li>{{description}} (document)</li>
+{{/each}}
+{{#each checklists}}
+<li>{{description}} (checklist)</li>
+{{/each}}
+{{#each alarmsets}}
+<li>{{description}} (alarm set)</li>
+{{/each}}
+</ul>
+ {{#if new_document}}
+    <div class="newdocument">
+      <input type="text" id="add-newdocument" value="" />
+    </div>
+  {{else}}
+  <div class="newdocument btn btn-inverse" id="btnNewDocument">+ Document</div>
+  {{/if}}
+ {{#if new_checklist}}
+    <div class="newtask">
+      <input type="text" id="add-newchecklist" value="" />
+    </div>
+  {{else}}
+  <div class="newchecklist btn btn-inverse" id="btnNewChecklist">+ Checklist</div>
+  {{/if}}
+ {{#if new_alarmset}}
+    <div class="newtask">
+      <input type="text" id="add-newalarmset" value="" />
+    </div>
+  {{else}}
+  <div class="newalarmset btn btn-inverse" id="btnNewAlarmset">+ Alarm Set</div>
+  {{/if}}
+ {{#if editing_defaultcontext}}
+  <div class="editing_defaultcontext">
+    <input type="text" id="editing-defaultcontext" placeholder="{{defaultcontext}}" />
+  </div>
+  {{else}}
+  <div class="defaultcontext btn btn-inverse" id="btnDefaultContext">Default Context</div>
+  {{/if}}
+  <div class="archiveproject btn btn-inverse" id="btnArchiveProject">Archive Project</div>
+
+
+
+{{/if}}
+
       </li>
 {{/if}}
 </template>
