starting to add the contextpicker to the Review tab

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -8,6 +8,11 @@
     {{> alarmseteditingdialog}}
 
 {{> calendar}}
+
+{{> contextpicker}}
+{{> multicontext}}
+
+
 {{> mostimportanttasks}}
 
 {{> waitingfors}}
