putting the date at the top of the app

--- a/client/main.html
+++ b/client/main.html
@@ -10,6 +10,7 @@
     </div>
     <div id="categories-container">
       {{> categories}}
+      {{> date}}
     </div>
     <div id="list">
       {{> process}}
