starting to add contexts from the processing dialog

--- a/client/process/processingdialog/processingdialog.html
+++ b/client/process/processingdialog/processingdialog.html
@@ -16,6 +16,9 @@
 {{#if projwithnolargeroutcome}}
       <div class="btn btn-primary largeroutcome">This is a Larger Outcome</div>
 {{/if}}
+{{#if contextwithnolargercontext}}
+      <div class="btn btn-primary largercontext">This is a Larger Context</div>
+{{/if}}
       <h6>Name of project (no spaces) if part of a project or multi-step</h6>
 {{> project_picker}}
 
