tasks showing up on multicontexts now

--- a/client/review/projectslist/projectslist.html
+++ b/client/review/projectslist/projectslist.html
@@ -15,7 +15,7 @@
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
     {{#if hasMorePosts}}
-      <p><a class="load-more-projects">Load More</a></p>
+      <p><a class="load-more-projects">Load More Projects</a></p>
     {{/if}}
   {{else}}
     <div class="loading">{{>spinner}}</div>
