--- a/client/review/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/orgtask-todo-item/orgtask-todo-item.html
@@ -6,33 +6,34 @@
 <div class="btn btn-inverse checklistitem choosechecklistitem active">checklistitem1</div>
 {{else}}
 
-{{#if mitornot}}
-{{#if project}}
+  {{#if mitornot}}
+    {{#if project}}
 <div class="btn btn-inverse checklistitem choosechecklistitem mit">checklistitem2</div>
 <div class="btn btn-inverse mitproj">{{project}}</div>
-{{/if}}
-{{/if}}
-{{#if is_kickstarter}}
+    {{/if}}
+  {{/if}}
+  {{#if is_kickstarter}}
 <div class="btn btn-inverse active btn-danger kickstart">kickstart</div><p class="btn btn-inverse {{mitornot}} mit">mit</p>
-{{/if}}
-{{#if nokickstart}}
+  {{/if}}
+  {{#if nokickstart}}
 <div class="btn btn-inverse kickstart choosekickstart">kickstart</div>
-{{#if mitornot}}
+    {{#if mitornot}}
 <div class="btn btn-inverse checklistitem choosechecklistitem">checklistitem3</div>
-{{else}}
-{{#if project}}
+    {{else}}
+      {{#if project}}
 <div class="btn btn-inverse checklistitem choosechecklistitem">checklistitem4</div>
-{{/if}}
-{{/if}}
-{{/if}}
+      {{/if}}
+    {{/if}}
+  {{/if}}
 {{/if}}
 
 {{#if is_priority}}
+<div class="btn btn-inverse kickstart choosekickstart">kickstart</div>
 <div class="btn {{is_sequential}} kickstart choosesequential">sequential</div>
 {{else}}
 {{/if}}
 
-    {{#if editing}}
+{{#if editing}}
       <div class="edit">
         <input style="width:90%" id="todo-input" type="text" value="{{description}}" />
       </div>
