moved closecontext button so you could click in succession

--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -1,6 +1,6 @@
 <template name="multicontext">
 {{#each multicontext}}
-<h3>{{this}}</h3><div class="btn btn-inverse closecontext">+</div>
+<div class="btn btn-inverse closecontext">+</div><h3>{{this}}</h3>
   <ul id="task_list">
     {{#each multitasks}}
       <li class="task_item alert">
