--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -1,6 +1,6 @@
 <template name="multicontext">
 {{#each multicontext}}
-<button type="button" class="contclose close" id="{{_id}}">Send to background</button><div class="btn btn-inverse closecontext">+</div><h3>{{this}}</h3>
+<div class="btn btn-inverse closecontext">+</div><h3>{{this}}</h3><button type="button" class="contclose close" id="{{_id}}">Send to background</button>
 
   <ul id="task_list">
     {{#each multitasks}}
