bunch of changes, hopefully for the better

--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -1,4 +1,5 @@
 <template name="multicontext">
+<h3 style="width: 100%;">Next Actions</h3>
 {{#each multicontext}}
 <div class="btn btn-inverse closecontext">+</div><h3>{{this}}</h3><button type="button" class="contclose close" id="{{_id}}">Send to background</button>
 
