--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -1,5 +1,5 @@
 <template name="contextpicker">
-<h3>Next Actions</h3>
+<h3>Contexts</h3>
 <ul id="contextpicker">
 {{#each contexts}}
 {{#if context}}<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>{{/if}}
