style changes for mobile

--- a/client/review/calendar/calendar.html
+++ b/client/review/calendar/calendar.html
@@ -20,7 +20,7 @@
 {{/if}}
 
 {{#if duedate}}
-<p style="">{{duedate}}</p><p style="float: right; position: relative; top: -25px;">{{dueclock}}</p>
+<p style="">{{duedate}}</p><p class="dueclock">{{dueclock}}</p>
 {{/if}}
       </li>
 
