setting limit of 5 on contexts

--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -1,8 +1,8 @@
 <template name="contextpicker">
-<h3>Contexts</h3>
+<h3>Contexts (Next Actions)</h3>
 <ul id="contextpicker">
 {{#each contexts}}
-{{#if context}}<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>{{/if}}
+<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>
 {{/each}}
 </ul>
 
