moving contexts around

--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -2,7 +2,7 @@
 <h3>Contexts (Next Actions)</h3>
 <ul id="contextpicker">
 {{#each contexts}}
-<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>
+<li><h6><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</h6></li><button type="button" class="contclose close" id="{{_id}}">Send to background</button>
 {{/each}}
 </ul>
 
