--- a/client/review/inactivecontextpicker/inactivecontextpicker.html
+++ b/client/review/inactivecontextpicker/inactivecontextpicker.html
@@ -2,7 +2,7 @@
 <h3>Someday/Maybe Contexts</h3>
 <ul id="inactivecontextpicker">
 {{#each contexts}}
-{{#if context}}<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>{{/if}}
+<li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>
 {{/each}}
 </ul>
 
