--- a/client/review/project-item/project-item.html
+++ b/client/review/project-item/project-item.html
@@ -16,7 +16,7 @@
 
 {{/if}}
  <div class="btn btn-inverse btn-danger reviewproject">{{project}}</div>
- <button type="button" class="projclose close" id="{{_id}}">Send to background</button>
+ <button type="button" class="projclose close" id="{{_id}}">hide</button>
 </div>
     {{#if projopen}}
 {{/if}}
