--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -1,7 +1,9 @@
 <template name="multicontext">
+{{#if multicontext}}
 <h3 style="width: 100%;">Next Actions</h3>
+{{/if}}
 {{#each multicontext}}
-<div class="btn btn-inverse closecontext">+</div><h3>{{this}}</h3><button type="button" class="contclose close" id="{{_id}}">Send to background</button>
+<div class="btn btn-inverse closecontext">+</div><h3 class="multicontext-title">{{this}}</h3><button type="button" class="contclose close" id="{{_id}}">hide</button>
 
   <ul id="task_list">
     {{#each multitasks}}
