--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -6,27 +6,7 @@
 <div class="btn btn-inverse closecontext">+</div><h3 class="multicontext-title">{{this}}</h3><button type="button" class="contclose close" id="{{_id}}">hide</button>
 
   <ul id="task_list">
-    {{#each multitasks}}
-      <li class="task_item alert">
-        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
-
-
-    {{#if editing}}
-      <div class="edit">
-        <input style="width:90%" id="todo-input" type="text" value="{{description}}" />
-      </div>
-{{else}}
-<div class="todo-item">       <p>{{description}}</p>
-<p class="btn btn-inverse {{mitornot}} mit">mit</p>
-</div>
-{{/if}}
-
-{{#if duedate}}
-<p>{{duedate}}</p>
-{{/if}}
-      </li>
-
-    {{/each}}
+    {{> multitasks}}
 
     {{#each multitasks2}}
 {{#if somedaymaybeproject}}
