getting next actions from projects to start to function

--- a/client/do/multitasks2.html
+++ b/client/do/multitasks2.html
@@ -1,4 +1,5 @@
-<template name="multitasks2">
+<template name="multitaskstwo">
+
 
     {{#each multitasks2}}
 {{#if somedaymaybeproject}}
@@ -24,7 +25,6 @@
 {{/if}}
     {{/each}}
 
-
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
     {{#if hasMorePosts}}
@@ -37,3 +37,4 @@
 
 
 </template>
+
