--- a/client/do/multicontext.html
+++ b/client/do/multicontext.html
@@ -7,30 +7,7 @@
 
   <ul id="task_list">
     {{> multitasks}}
-
-    {{#each multitasks2}}
-{{#if somedaymaybeproject}}
-{{else}}
-
-      <li class="task_item alert {{projectcolor}}">
-
-        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
-
-    {{#if editing}}
-      <div class="edit">
-        <input style="width:90%" id="todo-input" type="text" value="{{description}}" />
-      </div>
-
-{{else}}
-
-<div class="todo-item">       <p>{{description}}</p> </div>
-<p class="btn btn-inverse {{mitornot}} mit">mit</p>
-<p title="{{largeroutcome}}" id="doing-project">{{project}}</p>
-
-{{/if}}
-      </li>
-{{/if}}
-    {{/each}}
+    {{> multitaskstwo}}
 
 
   </ul>
