moving process into review

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -6,6 +6,8 @@
     {{> checklisteditingdialog}}
     {{> alarmseteditingdialog}}
 
+{{> process}}
+
 {{#if calendarloaded}}
 {{> calendar}}
 {{/if}}
