added read and review section and stopped larger contexts from appearing in waiting fors and projectless somedaymaybes

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -22,6 +22,10 @@
 {{> mostimportanttasks}}
 {{/if}}
 
+{{#if readandreviewloaded}}
+{{> readandreview}}
+{{/if}}
+
 {{#if waitingforsloaded}}
 {{> waitingfors}}
 {{/if}}
