previous calendar data

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -8,6 +8,10 @@
 
 {{> process}}
 
+{{#if previouscalendarloaded}}
+{{> previouscalendar}}
+{{/if}}
+
 {{#if calendarloaded}}
 {{> calendar}}
 {{/if}}
