changed word loading to a spinner

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -45,7 +45,7 @@
 
 {{#if moreResults}}
     <div id="showMoreResults" style="margin-left: 25px;">
-        <span class="loading">Loading...</span>
+        <span class="loading">{{> spinner}}</span>
     </div>
 {{/if}}
 
