half-way done making sections closable

--- a/client/review/calendar/calendar.html
+++ b/client/review/calendar/calendar.html
@@ -1,6 +1,6 @@
 <template name="calendar">
 
-<h3>Calendar</h3>
+<h3>Calendar</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closecalendarsection">+</div>
   <ul id="task_list">
     {{#each calendartasks}}
 
