--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -1,6 +1,6 @@
 <template name="contextpicker">
 {{#unless fullmulticontext}}
-<h3>Contexts</h3>
+<h3>Contexts</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closenextactionssection">+</div>
 {{/unless}}
 <ul id="contextpicker">
 {{#each contexts}}
