--- a/client/review/mits/mits.html
+++ b/client/review/mits/mits.html
@@ -1,6 +1,6 @@
 <template name="mostimportanttasks">
 
-<h3>Most Important Tasks (MITs)</h3><p class="btn sorting_mits {{sorting_mits}}">Sort MITs</p>
+<h3>Most Important Tasks (MITs)</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closemitssection">+</div><p class="btn sorting_mits {{sorting_mits}}">Sort MITs</p>
 <div id="task_list" class="mit_task_list">
 {{#each mits}}
 {{#unless somedaymaybeproject}}
