--- a/client/review/previouscalendar/previouscalendar.html
+++ b/client/review/previouscalendar/previouscalendar.html
@@ -1,6 +1,6 @@
 <template name="previouscalendar">
 
-<h3>Previous Calendar</h3>
+<h3>Previous Calendar</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closepreviouscalendarsection">+</div>
   <ul id="task_list">
     {{#each previouscalendartasks}}
 
