--- a/client/review/process/process.html
+++ b/client/review/process/process.html
@@ -1,5 +1,5 @@
 <template name="process">
-<h3>Inbox ({{inboxcount}})</h3>
+<h3>Inbox ({{inboxcount}})</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closeinboxsection">+</div>
   {{#if is_processing}}
     {{> processingdialog}}
 
