--- a/client/review/review.html
+++ b/client/review/review.html
@@ -6,48 +6,87 @@
     {{> checklisteditingdialog}}
     {{> alarmseteditingdialog}}
 
+{{#unless inboxhidden}}
 {{> process}}
+{{/unless}}
 
+{{#unless previouscalendarhidden}}
 {{#if previouscalendarloaded}}
 {{> previouscalendar}}
 {{/if}}
+{{/unless}}
 
+{{#unless calendarhidden}}
 {{#if calendarloaded}}
 {{> calendar}}
 {{/if}}
+{{/unless}}
 
+{{#unless nextactionshidden}}
 {{#if nextactionsloaded}}
 {{> contextpicker}}
 {{> multicontext}}
 {{> inactivecontextpicker}}
 {{/if}}
+{{/unless}}
 
+{{#unless mitshidden}}
 {{#if mitsloaded}}
 {{> mostimportanttasks}}
 {{/if}}
+{{/unless}}
 
+{{#unless readandreviewhidden}}
 {{#if readandreviewloaded}}
 {{> readandreview}}
 {{/if}}
+{{/unless}}
 
+{{#unless waitingforshidden}}
 {{#if waitingforsloaded}}
 {{> waitingfors}}
 {{/if}}
+{{/unless}}
 
+{{#unless projectshidden}}
 {{#if projectsloaded}}
 {{> projectslist}}
 {{> somedaymaybeprojects}}
 {{/if}}
+{{/unless}}
 
+{{#unless projectlesssomedaymaybeshidden}}
 {{#if projectlesssomedaymaybesloaded}}
 {{> projectlesssomedaymaybes}}
 {{/if}}
+{{/unless}}
 
 {{#if moreResults}}
-    <div id="showMoreResults" style="margin-left: 25px;">
+    <div id="showMoreResults" style="height: 70px; width: 70px; diplay: block; text-align: center; margin-left: 25px;">
         <span class="loading">{{> spinner}}</span>
     </div>
 {{/if}}
 
   {{/if}}
+
+{{#if inboxhidden}}
+<h3>Inbox</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openinboxsection">-</div>
+{{/if}}
+
+{{#if previouscalendarhidden}}
+<h3>Previous Calendar</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openpreviouscalendarsection">-</div>
+{{/if}}
+
+{{#if calendarhidden}}
+<h3>Calendar</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse opencalendarsection">-</div>
+{{/if}}
+
+{{#if nextactionshidden}}
+<h3>Contexts</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse opennextactionssection">-</div>
+{{/if}}
+
+{{#if mitshidden}}
+<h3>MITs</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openmitssection">-</div>
+{{/if}}
+
 </template>
