finishing up closable sections

--- a/client/review/projectslist/projectslist.html
+++ b/client/review/projectslist/projectslist.html
@@ -1,6 +1,6 @@
 <template name="projectslist">
 
-<h3>Projects</h3>
+<h3>Projects</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closeprojectssection">+</div>
     <ul id="project_list" class="main-review">
       {{#each projects}}
 <div class="active-project {{nokickstart}}">
