--- a/client/review/readandreview/readandreview.html
+++ b/client/review/readandreview/readandreview.html
@@ -1,6 +1,6 @@
 <template name="readandreview">
 
-<h4>Read and Review</h4>
+<h4>Read and Review</h4><div style="float: left; position: relative; top: 5px; left: 5px;" class="btn btn-inverse closereadandreviewsection">+</div>
 <div id="task_list">
 {{#each readandreview}}
 {{> orgtask_todo_item}}
