--- a/client/review/review.html
+++ b/client/review/review.html
@@ -89,4 +89,20 @@
 <h3>MITs</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openmitssection">-</div>
 {{/if}}
 
+{{#if readandreviewhidden}}
+<h3>Read and Review</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openreadandreviewsection">-</div>
+{{/if}}
+
+{{#if waitingforshidden}}
+<h3>Waiting Fors</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openwaitingforssection">-</div>
+{{/if}}
+
+{{#if projectshidden}}
+<h3>Projects</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openprojectssection">-</div>
+{{/if}}
+
+{{#if projectlesssomedaymaybeshidden}}
+<h3>Projectless Someday/Maybes</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openprojectlesssomedaymaybessection">-</div>
+{{/if}}
+
 </template>
