--- a/client/review/waitingfors/waitingfors.html
+++ b/client/review/waitingfors/waitingfors.html
@@ -1,6 +1,6 @@
 <template name="waitingfors">
 
-<h4>Waiting Fors</h4>
+<h4>Waiting Fors</h4><div style="float: left; position: relative; top: 5px; left: 5px;" class="btn btn-inverse closewaitingforssection">+</div>
 <div id="task_list">
 {{#each waitingfors}}
 {{> orgtask_todo_item}}
