--- a/client/review/projectlesssomedaymaybes/projectlesssomedaymaybes.html
+++ b/client/review/projectlesssomedaymaybes/projectlesssomedaymaybes.html
@@ -1,6 +1,6 @@
 <template name="projectlesssomedaymaybes">
 {{#if projectlesssomedaymaybesloaded}}
-<h4>Projectless Someday/Maybe tasks</h4>
+<h4>Projectless Someday/Maybe tasks</h4><div style="float: left; position: relative; top: 5px; left: 5px;" class="btn btn-inverse closeprojectlesssomedaymaybessection">+</div>
 <div id="task_list">
 {{#each projectlesssomedaymaybes}}
 {{> orgtask_todo_item}}
