moved spinner to center

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -62,7 +62,7 @@
 {{/unless}}
 
 {{#if moreResults}}
-    <div id="showMoreResults" style="height: 70px; width: 70px; diplay: block; text-align: center; margin-left: 25px;">
+    <div id="showMoreResults" style="height: 70px; width: 70px; diplay: block; text-align: center; margin: auto;">
         <span class="loading">{{> spinner}}</span>
     </div>
 {{/if}}
