showing rank on tasks and sorting read and review and waiting fors by rank order

--- a/client/review/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/orgtask-todo-item/orgtask-todo-item.html
@@ -43,5 +43,6 @@
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
+<p>{{rank}}</p>
       </li>
 </template>
