--- a/client/review/projectslist/projectslist.html
+++ b/client/review/projectslist/projectslist.html
@@ -2,8 +2,15 @@
 
 <h3>Projects</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closeprojectssection">+</div>
     <ul id="project_list" class="main-review">
-      {{#each projects}}
+      {{#each kickstarterlessprojects}}
 <div class="active-project {{nokickstart}}">
+          {{> project_item}}
+{{> openproject}}
+
+</div> <!-- active project -->
+      {{/each}}
+      {{#each projects}}
+<div class="active-project">
           {{> project_item}}
 {{> openproject}}
 
