--- a/client/review/projopen/projopen.html
+++ b/client/review/projopen/projopen.html
@@ -18,7 +18,7 @@
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
     {{#if hasMorePosts}}
-      <p class="load-more-project"><a class="load-more-project-{{projectid}}">Load More</a></p>
+      <p class="load-more-project"><a class="load-more-project-{{_id}}">Load More</a></p>
     {{/if}}
   {{else}}
     <div class="loading">{{>spinner}}</div>
