made somedaymaybe projects section closeable and closed by default

--- a/client/review/somedaymaybeprojects/somedaymaybeprojects.html
+++ b/client/review/somedaymaybeprojects/somedaymaybeprojects.html
@@ -1,6 +1,6 @@
 <template name="somedaymaybeprojects">
 
-<h3>Someday/Maybe</h3>
+<h3>Someday/Maybe</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closesomedaymaybeprojectssection">+</div>
    <ul id="task_list" class="main-review">
       {{#each somedaymaybeprojects}}
         {{> project_item2}}
