--- a/client/review/review.html
+++ b/client/review/review.html
@@ -38,7 +38,12 @@
 
 {{#unless projectshidden}}
 {{> projectslist}}
+{{#unless somedaymaybeprojectshidden}}
 {{> somedaymaybeprojects}}
+{{/unless}}
+{{#if somedaymaybeprojectshidden}}
+<h3>Someday/Maybe</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse opensomedaymaybeprojectssection">-</div>
+{{/if}}
 {{/unless}}
 
 {{#unless projectlesssomedaymaybeshidden}}
