doing the same to inactive contexts as to someday maybe projects

--- a/client/review/inactivecontextpicker/inactivecontextpicker.html
+++ b/client/review/inactivecontextpicker/inactivecontextpicker.html
@@ -1,5 +1,5 @@
 <template name="inactivecontextpicker">
-<h3>Someday/Maybe Contexts</h3>
+<h3>Someday/Maybe Contexts</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closeinactivecontextssection">+</div>
 <ul id="inactivecontextpicker">
 {{#each contexts}}
 <li><div class="btn btn-inverse">{{checkedcontext}}</div> {{context}} ({{count}})</li>
