--- a/client/review/projectslist/projectslist.html
+++ b/client/review/projectslist/projectslist.html
@@ -19,4 +19,14 @@
       {{/each}}
     </ul>
 
+<!-- load more -->
+  {{#if Template.subscriptionsReady}}
+    {{#if hasMorePosts}}
+      <p><a class="load-more-projects">Load More</a></p>
+    {{/if}}
+  {{else}}
+    <div class="loading">{{>spinner}}</div>
+  {{/if}}
+<!-- end of load more -->
+
 </template>
