--- a/client/review/focusprojectslist/focusprojectslist.html
+++ b/client/review/focusprojectslist/focusprojectslist.html
@@ -2,6 +2,13 @@
 
 <h3>Projects in Progress</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closeprojectssection">+</div>
     <ul id="focusproject_list" class="main-review">
+      {{#each kickstarterlessprojects}}
+<div class="active-project {{nokickstart}}">
+          {{> project_item}}
+{{> openproject}}
+
+</div> <!-- active project -->
+      {{/each}}
       {{#each projects}}
 <div class="active-project">
           {{> project_item}}
