--- a/client/review/wips/wips.html
+++ b/client/review/wips/wips.html
@@ -3,11 +3,11 @@
 <h3>Work in Progress (WIPs)</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closewipssection">+</div><p class="btn sorting_wips {{sorting_wips}}">Sort WIPs</p>
 <div id="task_list" class="wip_task_list">
 {{#each wips}}
-{{#unless somedaymaybeproject}}
-{{#unless somedaymaybecontext}}
+{{#if wipproject}}
+{{#if wipcontext}}
 {{> orgtask_todo_item}}
-{{/unless}}
-{{/unless}}
+{{/if}}
+{{/if}}
 {{/each}}
 </div>
 
