--- a/client/review/focuscontextpicker/focuscontextpicker.html
+++ b/client/review/focuscontextpicker/focuscontextpicker.html
@@ -5,7 +5,7 @@
 <ul id="focuscontextpicker">
 {{#each contexts}}
 {{#unless in_multicontext}}
-<li><h6><div class="btn btn-inverse">-</div> {{context}} ({{count}})</h6></li><button type="button" class="contclose close" id="{{_id}}">hide</button>
+<li><h6><div class="btn btn-inverse">-</div> {{context}} ({{count}})</h6></li><button type="button" class="contcip close" id="{{_id}}">focus</button><button type="button" class="contclose close" id="{{_id}}">hide</button>
 {{/unless}}
 {{/each}}
 </ul>
