multicontexts specifically for contexts in progress now open correctly

--- a/client/review/review.html
+++ b/client/review/review.html
@@ -20,6 +20,7 @@
 
 {{#unless nextactionshidden}}
 {{> focuscontextpicker}}
+{{> focusmulticontext}}
 {{> contextpicker}}
 {{> multicontext}}
 {{#unless inactivecontextshidden}}
