--- a/client/review/focuscontextpicker/focuscontextpicker.html
+++ b/client/review/focuscontextpicker/focuscontextpicker.html
@@ -1,10 +1,10 @@
 <template name="focuscontextpicker">
-{{#unless fullmulticontext}}
+{{#unless fullfocusmulticontext}}
 <h3>Contexts in Progress</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closefocusnextactionssection">+</div>
 {{/unless}}
 <ul id="focuscontextpicker">
 {{#each contexts}}
-{{#unless in_multicontext}}
+{{#unless in_focusmulticontext}}
 <li><h6><div class="btn btn-inverse">-</div> {{context}} ({{count}})</h6></li><button type="button" class="contcip close" id="{{_id}}">focus</button><button type="button" class="contclose close" id="{{_id}}">hide</button>
 {{/unless}}
 {{/each}}
