--- a/client/main.html
+++ b/client/main.html
@@ -13,7 +13,6 @@
       {{> date}}
     </div>
     <div id="list">
-{{> mapview}}
       {{> organize}}
       {{> review}}
       {{> do}}
@@ -24,10 +23,15 @@
 </body>
 
 <template name="mapview">
-  <p><input type="button" value="Clear" id="clearButton"></p>
-
+{{#unless maphidden}}
+  <p class="clearboth"><input type="button" value="Clear" id="clearButton"></p>
+<div style="float: right; position: absolute; top: 175px; right: 50px; z-index: 1;" class="btn btn-inverse closemapsection">+</div>
 
   <div id="map-canvas"></div>
   <div id="directions-panel"></div>
+{{/unless}}
+{{#if maphidden}}
+<h3>Map</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openmapsection">-</div>
+{{/if}}
 
 </template>
