--- a/client/review/wips/wips.html
+++ b/client/review/wips/wips.html
@@ -1,6 +1,9 @@
 <template name="workinprogress">
 
 <h3>Work in Progress (WIPs)</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closewipssection">+</div><p class="btn sorting_wips {{sorting_wips}}">Sort WIPs</p>
+
+{{> mapview}}
+
 <div id="task_list" class="wip_task_list">
 {{#each wips}}
 {{#if wipproject}}
