creating navigation context and items

--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -6,6 +6,13 @@
 {{#each contexts}}
 {{#unless in_multicontext}}
 <li><h6><div class="btn btn-inverse">-</div> {{context}} ({{count}})</h6></li><button type="button" class="contcip close" id="{{_id}}">focus</button><button type="button" class="contclose close" id="{{_id}}">hide</button>
+ {{#if editing_contextlocation}}
+  <div class="editing_contextlocation">
+    <input type="text" id="editing-contextlocation" placeholder="{{contextlocation}}" />
+  </div>
+  {{else}}
+  <div class="contextlocation btn btn-inverse" id="btnContextLocation">Context Location</div>
+  {{/if}}
 {{/unless}}
 {{/each}}
 </ul>
