--- a/client/main.html
+++ b/client/main.html
@@ -25,7 +25,7 @@
 <template name="mapview">
 {{#unless maphidden}}
   <p class="clearboth"><input type="button" value="Clear" id="clearButton"></p>
-<div style="float: right; position: absolute; top: 175px; right: 50px; z-index: 1;" class="btn btn-inverse closemapsection">+</div>
+<div style="float: right; position: relative; top: 35px; right: 100px; z-index: 1;" class="btn btn-inverse closemapsection">+</div>
 
   <div id="map-canvas"></div>
   <div id="directions-panel"></div>
