working google maps but need to add the API key

--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,10 @@
 <head>
   <title>meteor-taskwarrior</title>
   <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1">
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={YOUR GOOGLE MAPS API KEY HERE}&sensor=false"></script>
+  <script type="text/javascript">
+    google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
 </head>
 
 <body>
