making the navigation open and close

--- a/client/review/wips/navigation/navigation.html
+++ b/client/review/wips/navigation/navigation.html
@@ -1,13 +1,11 @@
 <template name="navigation">
-
+{{#unless navigationsectionhidden}}
 <h4>Navigation</h4><div style="float: left; position: relative; top: 5px; left: 5px;" class="btn btn-inverse closenavigationsection">+</div>
 <div id="task_list">
 {{#each navigation}}
 {{> navtask}}
 {{/each}}
 </div>
-
-<hr/>
 
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
@@ -18,5 +16,11 @@
     <div class="loading">{{>spinner}}</div>
   {{/if}}
 <!-- end of load more -->
+<hr />
+{{/unless}}
+
+{{#if navigationsectionhidden}}
+<h4>Navigation</h4><div style="float: left; position: relative; top: 5px; left: 5px;" class="btn btn-inverse opennavigationsection">-</div>
+{{/if}}
 
 </template>
