show online/offline status

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
   <title>meteor-taskwarrior</title>
   <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1">
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={GOOGLE API KEY}&sensor=false"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={YOUR GOOGLE KEY}&sensor=false"></script>
   <script type="text/javascript">
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
@@ -13,6 +13,7 @@
       {{> loginButtons align="left"}}
     </div>
     <div id="categories-container">
+      {{> status}}
       {{> categories}}
       {{> date}}
     </div>
