--- a/client/review/review.html
+++ b/client/review/review.html
@@ -58,6 +58,10 @@
 {{/if}}
 {{/unless}}
 
+{{#unless perspectivehidden}}
+{{> perspective}}
+{{/unless}}
+
 {{#unless projectlesssomedaymaybeshidden}}
 {{> projectlesssomedaymaybes}}
 {{/unless}}
@@ -96,6 +100,10 @@
 
 {{#if projectshidden}}
 <h3>Projects</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openprojectssection">-</div>
+{{/if}}
+
+{{#if perspectivehidden}}
+<h3>Perspective</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse openperspectivesection">-</div>
 {{/if}}
 
 {{#if projectlesssomedaymaybeshidden}}
